# sidequest

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  pytest.yml
sidequest/: __init__.py  db.py  dispatch.py  messages.py  quests.py  queue.py  runtime.py  worker.py  workflow.py
tests/: test_async_sidequest.py  test_sidequest.py
