[tool.poetry]
name = "sidequest"
version = "0.1.0"
description = "Sidequest task management library"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
aiosqlite = "^0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
