[tool.poetry]
name = "sidequest"
version = "0.1.0"
description = "Sidequest task management library"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
aiosqlite = "^0.21"
greenlet = "^3.2.2"
pydantic = "^2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
pyright = "^1.1.350"
ruff = "^0.4.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
src = ["sidequest", "tests"]

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportPrivateUsage = false
strictParameterNoneValue = false